force-app/main/default/objects/conference360__Form_Element__c/fields/conference360__Character_Length__c.field-meta.xml
<CustomField>
    <fullName>conference360__Character_Length__c</fullName>
    <description>deprecated</description>
    <inlineHelpText>deprecated</inlineHelpText>
    <label>Character Length</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>