force-app/main/default/objects/conference360__Form_Element__c/fields/conference360__Controlling_Form_Element_Answer__c.field-meta.xml
<CustomField>
    <fullName>conference360__Controlling_Form_Element_Answer__c</fullName>
    <description>The parent question&apos;s answer (Form Element) if this is a conditional question.</description>
    <inlineHelpText>The parent question&apos;s answer (Form Element) if this is a conditional question.</inlineHelpText>
    <label>Controlling Form Element Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>