force-app/main/default/objects/conference360__Form_Element__c/fields/conference360__Default_Checkbox_Value__c.field-meta.xml
<CustomField>
    <fullName>conference360__Default_Checkbox_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set the default value if the question type is a checkbox.</description>
    <inlineHelpText>Set the default value if the question type is a checkbox.</inlineHelpText>
    <label>Default Checkbox Value</label>
    <type>Checkbox</type>
</CustomField>