force-app/main/default/objects/conference360__Form_Element__c/fields/conference360__Default_Picklist_Value2__c.field-meta.xml
<CustomField>
    <fullName>conference360__Default_Picklist_Value2__c</fullName>
    <description>If the question type is a picklist, set the default value.</description>
    <inlineHelpText>Set the default value for the Question.</inlineHelpText>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>