force-app/main/default/objects/conference360__Form_Element__c/fields/conference360__Default_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>conference360__Default_Picklist_Value__c</fullName>
    <description>deprecated</description>
    <inlineHelpText>deprecated</inlineHelpText>
    <label>z_Deprecated Default Picklist Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>