force-app/main/default/objects/conference360__Form_Element__c/fields/conference360__Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>conference360__Lookup_Field__c</fullName>
    <label>Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>