force-app/main/default/objects/conference360__Form_Element__c/fields/conference360__Maps_To_Field__c.field-meta.xml
<CustomField>
    <fullName>conference360__Maps_To_Field__c</fullName>
    <description>This Form Element&apos;s answer should map to this field.</description>
    <inlineHelpText>This Form Element&apos;s answer should map to this field.</inlineHelpText>
    <label>Maps To (Field)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>