force-app/main/default/objects/conference360__Form_Element__c/fields/conference360__Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>conference360__Picklist_Values__c</fullName>
    <description>The answer values if the question type is a picklist.</description>
    <inlineHelpText>The answer values if the question type is a picklist.</inlineHelpText>
    <label>Picklist Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>