force-app/main/default/objects/conference360__Form_Element__c/fields/conference360__Question_RT__c.field-meta.xml
<CustomField>
    <fullName>conference360__Question_RT__c</fullName>
    <description>The question of this Form Element.</description>
    <inlineHelpText>Supplemental question information can be used to show terms and conditions or other rich text for a question.</inlineHelpText>
    <label>Supplemental Question Information</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>