force-app/main/default/objects/conference360__Form_Element__c/fields/conference360__Required__c.field-meta.xml
<CustomField>
    <fullName>conference360__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Form Element is required.</description>
    <inlineHelpText>If the Form Element is required.</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>