force-app/main/default/objects/conference360__Form_Element__c/fields/conference360__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>conference360__Sort_Order__c</fullName>
    <description>Set the order for the questions/Form Elements.</description>
    <inlineHelpText>Set the order for the questions/Form Elements.</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>