force-app/main/default/objects/conference360__Form_Element__c/listViews/conference360__All.listView-meta.xml
<ListView>
    <fullName>conference360__All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>conference360__Form__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>